정밀도, 재현율, f1점수 등을 계산

--- a/머신러닝/ch3/Classification.ipynb
+++ b/머신러닝/ch3/Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -42,35 +42,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trainIndex:  [19991 19992 19993 ... 59997 59998 59999]\ntestIndex:  [    0     1     2 ... 20085 20088 20102]\n"
+      "trainIndex:  [19976 19977 19978 ... 59997 59998 59999]\ntestIndex:  [    0     1     2 ... 20242 20256 20279]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.96285\ntrainIndex:  [    0     1     2 ... 59997 59998 59999]\ntestIndex:  [19991 19992 19993 ... 40003 40004 40005]\n"
+      "0.955\ntrainIndex:  [    0     1     2 ... 59997 59998 59999]\ntestIndex:  [19976 19977 19978 ... 39997 39998 40009]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.93325\ntrainIndex:  [    0     1     2 ... 40003 40004 40005]\ntestIndex:  [39932 39937 39950 ... 59997 59998 59999]\n"
+      "0.9653\ntrainIndex:  [    0     1     2 ... 39997 39998 40009]\ntestIndex:  [39999 40000 40001 ... 59997 59998 59999]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.94955\n"
+      "0.95675\n"
      ]
     }
    ],
@@ -97,16 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.96285, 0.93325, 0.94955])"
+       "array([0.955  , 0.9653 , 0.95675])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,16 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.9101 , 0.90895, 0.9099 ])"
+       "array([0.9107 , 0.90865, 0.9096 ])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -173,13 +173,96 @@
        "array([False, False, False, ..., False, False, False])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y_train_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[53595,   984],\n       [ 1475,  3946]], dtype=int64)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(Y_train5, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8004056795131845"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score\n",
+    "precision_score(Y_train5, y_train_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7279099797085409"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall_score(Y_train5, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7624384117476573"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "f1_score(Y_train5, y_train_pred)"
    ]
   },
   {
