--- a/머신러닝/ch3/Classification.ipynb
+++ b/머신러닝/ch3/Classification.ipynb
@@ -2,75 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[False False False ... False  True False]\n"
+      "[False False False ... False False False]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([False])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from keras.datasets import mnist\n",
     "from sklearn.linear_model import SGDClassifier\n",
     "import numpy as np\n",
-    "(X_train, Y_train), (X_test, Y_test) = mnist.load_data()\n",
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
     "\n",
-    "X_train = X_train.reshape(60000, 784)\n",
-    "X_test = X_test.reshape(10000, 784)\n",
+    "x_train = x_train.reshape(60000, 784)\n",
+    "x_test = x_test.reshape(10000, 784)\n",
     "shuffle_index = np.random.permutation(60000)\n",
-    "X_train, Y_train = X_train[shuffle_index], Y_train[shuffle_index]\n",
+    "x_train, y_train = x_train[shuffle_index], y_train[shuffle_index]\n",
     "\n",
-    "Y_train5 = (Y_train == 5)\n",
-    "Y_test5 = (Y_test == 5)\n",
+    "y_train7 = (y_train == 7)\n",
+    "y_test7 = (y_test == 7)\n",
     "sgd_clf = SGDClassifier(max_iter=5, random_state=42)\n",
-    "sgd_clf.fit(X_train, Y_train5)\n",
-    "print(sgd_clf.predict(X_test))\n"
+    "sgd_clf.fit(x_train, y_train5)\n",
+    "print(sgd_clf.predict(x_test))\n",
+    "sgd_clf.predict([x_train[0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trainIndex:  [19976 19977 19978 ... 59997 59998 59999]\ntestIndex:  [    0     1     2 ... 20242 20256 20279]\n"
+      "0.9747512624368782\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.955\ntrainIndex:  [    0     1     2 ... 59997 59998 59999]\ntestIndex:  [19976 19977 19978 ... 39997 39998 40009]\n"
+      "0.98035\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9653\ntrainIndex:  [    0     1     2 ... 39997 39998 40009]\ntestIndex:  [39999 40000 40001 ... 59997 59998 59999]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.95675\n"
+      "0.9369968498424921\n"
      ]
     }
    ],
@@ -80,40 +77,38 @@
     "\n",
     "skfolds = StratifiedKFold(n_splits=3, random_state=42)\n",
     "\n",
-    "for train_index, test_index in skfolds.split(X_train, Y_train5):\n",
-    "    print(\"trainIndex: \", train_index)\n",
-    "    print(\"testIndex: \", test_index)\n",
+    "for train_index, test_index in skfolds.split(x_train, y_train7):\n",
     "    clone_clf = clone(sgd_clf)\n",
-    "    X_train_folds = X_train[train_index]\n",
-    "    Y_train_folds = Y_train5[train_index]\n",
-    "    X_test_fold = X_train[test_index]\n",
-    "    Y_test_fold = Y_train5[test_index]\n",
+    "    x_train_folds = x_train[train_index]\n",
+    "    y_train_folds = y_train7[train_index]\n",
+    "    x_test_fold = x_train[test_index]\n",
+    "    y_test_fold = y_train7[test_index]\n",
     "    \n",
-    "    clone_clf.fit(X_train_folds, Y_train_folds)\n",
-    "    y_pred = clone_clf.predict(X_test_fold)\n",
-    "    n_correct = sum(y_pred == Y_test_fold)\n",
+    "    clone_clf.fit(x_train_folds, y_train_folds)\n",
+    "    y_pred = clone_clf.predict(x_test_fold)\n",
+    "    n_correct = sum(y_pred == y_test_fold)\n",
     "    print(n_correct/len(y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.955  , 0.9653 , 0.95675])"
+       "array([0.97475126, 0.98035   , 0.93699685])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
-    "cross_val_score(sgd_clf, X_train, Y_train5, cv=3, scoring=\"accuracy\")"
+    "cross_val_score(sgd_clf, x_train, y_train7, cv=3, scoring=\"accuracy\")"
    ]
   },
   {
@@ -154,17 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import cross_val_predict\n",
-    "y_train_pred = cross_val_predict(sgd_clf, X_train, Y_train5, cv=3)"
+    "y_train_pred = cross_val_predict(sgd_clf, x_train, y_train7, cv=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +168,7 @@
        "array([False, False, False, ..., False, False, False])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,23 +179,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[53595,   984],\n       [ 1475,  3946]], dtype=int64)"
+       "array([[52221,  1514],\n       [  644,  5621]], dtype=int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "confusion_matrix(Y_train5, y_train_pred)"
+    "confusion_matrix(y_train7, y_train_pred)"
    ]
   },
   {
