--- a/머신러닝/ch9/1.ipynb
+++ b/머신러닝/ch9/1.ipynb
@@ -602,21 +602,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fetch_batch(epoch, batch_index, batch_size):\n",
-    "    np.random.seed(epoch * n_batches + batch_index)\n",
-    "    indices = np.random.randint(m, size=batch_size)\n",
-    "    X_batch = scaled_housing_data_plus_bias[indices]\n",
-    "    y_batch = housing.target.reshape(-1, 1)[indices]\n",
-    "    return X_batch, y_batch\n",
+    "import numpy as np\n",
     "\n",
-    "with tf.Session() as sess:\n",
-    "    sess.run(init)\n",
-    "    \n",
-    "    for epoch in range(n_epochs):\n",
-    "        for batch_index in range(n_batches):\n",
-    "            X_batch, y_batch = fetch_batch(epoch, batch_index, batch_size)\n",
-    "            sess.run(training_op, feed_dict={X:X_batch, y:y_batch})\n",
-    "    best_theta = theta.eval()"
+    "a = np.random.randint(10, size=10)\n"
    ]
   },
   {
