--- a/머신러닝/ch9/1.ipynb
+++ b/머신러닝/ch9/1.ipynb
@@ -963,7 +963,9 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "ename": "ValueError",
